tasa-dev/Orginais/deployment_bd_v000.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasa-pgr-deployment
  labels:
    app.kubernetes.io/name: tasa-pgr-name
  namespace: tasa
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: tasa-pgr-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tasa-pgr-name
    spec:
      containers:
      - name: tasa-pgr-container
        image: registry-host:5000/pgr-rest:1.1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /actuator/health/
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 5
