tasa-dev/Orginais/service_v000.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasa-pgr-service
  namespace: tasa
spec:
  selector:
    app.kubernetes.io/name: tasa-pgr-name
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
