tasa-dev/Orginais/ingress-haproxy-com-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasa-pgr-ingress
  annotations:
    kubernetes.io/ingress.class: haproxy
    haproxy.org/path-rewrite: /pl/pgr/(.*) /\1
  namespace: tasa
spec:
  rules:
  - host: toyotafake.com.ar
    http:
      paths:
      - path: /pl/pgr/api/
        pathType: Prefix
        backend:
          service:
            name: tasa-pgr-service
            port:
              number: 80
